test_files/netlist_cmp/valid/valid_case_20_a.net
V1 A 0 9
R1 A B 2.2k
R2 B C 3.3k
Q1 C B 0 0 2N3904
R3 A C 1k
.model NPN NPN
.op
.backanno
.end
