test_files/netlist_cmp/invalid/invalid_case_07_b.net
V1 VCC 0 12
R1 VCC NB1 33k
R2 NB1 0 10k
Q1 NC1 NB1 0 0 2N3904
R3 VCC NC1 2.2k
R4 VCC NB2 33k
R5 NB2 0 10k
Q2 NC2 NB2 0 0 BC547B
R6 VCC NC2 2.2k
.model NPN NPN
.op
.backanno
.end
